feat(synapse): unify spector-cli and spector-synapse under spring boot auto-configuration (#762)
* feat(synapse): unify spector-cli and spector-synapse under spring boot auto-configuration

Bring spector-cli (spectorctl) under Spring Boot to share auto-configuration with spector-synapse via spring-ai-starter-spector-store:
- Host Picocli inside Spring Boot with SpringPicocliFactory and SpectorPicocliRunner
- Configure fast profile routing (cli-remote vs cli-embedded) with lazy initialization
- Rename ingest -> remember (alias: ingest) and search -> recall (alias: search)
- Add early SpectorCliConfigInitializer bridging CLI flags and spector.yml
- Configure maven-shade-plugin AppendingTransformer for AutoConfiguration.imports
- Deprecate standalone SpectorMcpMain in favor of spectorctl mcp
- Update documentation and test suites across synapse modules

Closes #761

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>

* fix(synapse): address review feedback for spring boot cli integration

Address review feedback for Issue #761 / PR #762:
- Expand determineProfile to route 'memory' subcommand and config-driven remember/ingest to cli-embedded
- Enforce constructor injection for @Component commands (remove fragile no-arg fallback constructors)
- Remove manual SpectorMemoryConfigurator fallback in McpCommand and RememberCommand (fail fast when beans missing)
- Let Spring ApplicationContext manage SpectorMemory disposal instead of manual close() in McpCommand shutdown hook
- Clean up unused and stale imports in McpCommand and RememberCommand
- Expand routing and application tests for memory and config-driven batch mode

Refs #761, #762

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>

---------

Co-authored-by: Bharat Joshi <bharatjoshi@spectrayan.com>